plugin/src/test/resources/annotator/perl/unreachableCode/plusDie.code
42 <error descr="Unreachable code">+</error> die "Something";